force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <label>岗位</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>岗位编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>岗位</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>