force-app/main/default/objects/Position__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>启用</label>
    <type>Checkbox</type>
</CustomField>