force-app/main/default/objects/Position__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>只能包含字母数字字符，必须以字母开头，不能以下划线字符结尾或包含两个连续的下划线字符，而且在所有岗位中必须是唯一的;</inlineHelpText>
    <label>岗位小组名</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>