force-app/main/default/objects/Position__c/fields/DoesIncludeBosses__c.field-meta.xml
<CustomField>
    <fullName>DoesIncludeBosses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>授予使用层次结构的访问权限</label>
    <type>Checkbox</type>
</CustomField>