force-app/main/default/objects/Position__c/fields/Grouo_Name__c.field-meta.xml
<CustomField>
    <fullName>Grouo_Name__c</fullName>
    <label>岗位名</label>
    <length>40</length>
    <type>Text</type>
</CustomField>