force-app/main/default/objects/Position__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <externalId>true</externalId>
    <label>岗位用户组ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>