force-app/main/default/objects/Position__c/fields/Is_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*正在作业中</label>
    <type>Checkbox</type>
</CustomField>