force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grouo_Name__c</columns>
    <columns>DeveloperName__c</columns>
    <columns>GroupId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>